[package]
name = "winpe_plugin_loader"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sevenz-rust = "0.6"
winreg = "0.52"
walkdir = "2.5"
rust-ini = "0.21"
fs_extra = "1.3"
rand = "0.8"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
